# portfolio

./: README.md
AsyncLoadingStatus/: AsyncLoadingStatus.js  README.md
ComboBox/: AllOption.java  ComboBox.java  EmptyOption.java  Option.java  QueryOption.java  README.md  SingleOption.java
haskell/: CountItems.hs  README.md  itemsfile-parser.hs  test-data
streamingClosestDistances/: README.md  shopping.cabal
streamingClosestDistances/app/: Main.hs
streamingClosestDistances/src/: Distance.hs  Parse.hs  Segment.hs
streamingClosestDistances/test/: Spec.hs
streamingClosestDistances/test/Test/: Distance.hs  Segment.hs
