name:                shopping
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shopping#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parse
                     , Segment
                     , Distance
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-bytestring
                     , pipes-csv
                     , time
                     , vector-space
                     , mtl
  default-language:    Haskell2010

executable shopping-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pipes
                     , pipes-bytestring
                     , groom
                     , shopping
                     , mtl
                     , optparse-applicative
  default-language:    Haskell2010

test-suite shopping-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shopping
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , quickcheck-assertions
                     , vector-space
                     , ieee754
                     , time
                     , pipes
  other-modules:       Test.Distance
                     , Test.Segment
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
